fixed firefox clipping issue

--- a/showhn/static/showhn.css
+++ b/showhn/static/showhn.css
@@ -82,11 +82,12 @@ body {
 .post_image {
     width: 300px;
     height: 210px;
+    position: relative;
 }
 
-.post_image img {
+.clip {
     position: absolute;
-    clip:rect(0px,300px,210px,0px);
+    clip:rect(0px 300px 210px 0px);
 }
 
 .post_image_title a {
